<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="20dp"
    app:strokeColor="@android:color/black"
    app:strokeWidth="2dp"
    android:layout_marginBottom="32dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        >


        <TextView
            android:id="@+id/TextViewCorrectas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/jetbrains_mono_medium"
            android:text="@string/correctas"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TextViewFallos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/jetbrains_mono_medium"
            android:text="@string/fallos"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/TextViewCorrectas"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/TextViewCorrectas"
            app:layout_constraintTop_toBottomOf="@+id/TextViewCorrectas" />

        <TextView
            android:id="@+id/TextViewNC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/jetbrains_mono_medium"
            android:text="@string/sin_contestar"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/TextViewFallos"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/TextViewFallos"
            app:layout_constraintTop_toBottomOf="@+id/TextViewFallos" />

        <TextView
            android:id="@+id/TextViewNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/jetbrains_mono_medium"
            android:text="@string/nota"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/TextViewNC"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/TextViewNC"
            app:layout_constraintTop_toBottomOf="@+id/TextViewNC" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAceptar"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/buttonBlue"
            android:padding="10dp"
            android:text="@string/aceptar"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/TextViewNota"
            app:layout_constraintHorizontal_bias="0.329"
            app:layout_constraintStart_toStartOf="@+id/TextViewNota"
            app:layout_constraintTop_toBottomOf="@+id/TextViewNota" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>