<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="366dp"
        android:layout_height="648dp"
        app:cardBackgroundColor="@color/form_bg"
        app:cardCornerRadius="16dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_full" />

            <TextView
                android:id="@+id/textViewCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/jetbrains_mono_medium"
                android:text="@string/correo_electr_nico"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/etNombre"
                app:layout_constraintHorizontal_bias="0.008"
                app:layout_constraintStart_toStartOf="@+id/etNombre"
                app:layout_constraintTop_toBottomOf="@+id/etNombre" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="304dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/introduce_tu_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/GrisApagado"
                app:layout_constraintEnd_toEndOf="@+id/textViewCorreo"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewCorreo"
                app:layout_constraintTop_toBottomOf="@+id/textViewCorreo" />

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/jetbrains_mono_medium"
                android:text="@string/nombre"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="304dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/introduce_tu_nombre"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/GrisApagado"
                app:layout_constraintEnd_toEndOf="@+id/textViewNombre"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewNombre"
                app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

            <TextView
                android:id="@+id/textViewPasswordReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/jetbrains_mono_medium"
                android:text="@string/contrase_a"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/etCorreo"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/etCorreo"
                app:layout_constraintTop_toBottomOf="@+id/etCorreo" />

            <EditText
                android:id="@+id/etPasswordReg"
                android:layout_width="304dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/introduce_tu_contrase_a"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/GrisApagado"
                app:layout_constraintEnd_toEndOf="@+id/textViewPasswordReg"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewPasswordReg"
                app:layout_constraintTop_toBottomOf="@+id/textViewPasswordReg" />

            <TextView
                android:id="@+id/textViewRePasswordReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/jetbrains_mono_medium"
                android:text="@string/repite_la_contrase_a"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/etPasswordReg"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/etPasswordReg"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordReg" />

            <EditText
                android:id="@+id/etRePasswordReg"
                android:layout_width="304dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/repite_la_contrase_a"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/GrisApagado"
                app:layout_constraintEnd_toEndOf="@+id/textViewRePasswordReg"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewRePasswordReg"
                app:layout_constraintTop_toBottomOf="@+id/textViewRePasswordReg" />

            <TextView
                android:id="@+id/textViewToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/jetbrains_mono_medium"
                android:text="@string/ya_tienes_una_cuenta_ninicia_sesi_n_aqu"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="@+id/buttonRegister"
                app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRegister"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/buttonBlue"
                android:fontFamily="@font/jetbrains_mono_medium"
                android:padding="10dp"
                android:text="@string/registrarse"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="@+id/etRePasswordReg"
                app:layout_constraintHorizontal_bias="0.531"
                app:layout_constraintStart_toStartOf="@+id/etRePasswordReg"
                app:layout_constraintTop_toBottomOf="@+id/etRePasswordReg" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>